--- a/VMS/Properties/Resources.resx
+++ b/VMS/Properties/Resources.resx
@@ -118,7 +118,61 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="model" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\model.pb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="cv110" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cv110.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="cvaux110" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cvaux110.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="cvextern" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cvextern.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="cxcore110" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cxcore110.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="haarcascade_frontalface_default" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\haarcascade_frontalface_default.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="highgui110" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\highgui110.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_calib3d220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_calib3d220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_contrib220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_contrib220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_core220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_core220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_features2d220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_features2d220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_ffmpeg220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_ffmpeg220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_flann220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_flann220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_gpu220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_gpu220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_highgui220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_highgui220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_imgproc220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_imgproc220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_legacy220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_legacy220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_ml220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_ml220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_objdetect220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_objdetect220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="opencv_video220" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\opencv_video220.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
