--- a/VMS/Forms/OldVisitor.resx
+++ b/VMS/Forms/OldVisitor.resx
@@ -298,4 +298,7 @@
         AElFTkSuQmCC
 </value>
   </data>
+  <metadata name="imageBoxFrameGrabber.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
